--- a/slask.ipynb
+++ b/slask.ipynb
@@ -814,7 +814,9 @@
    "id": "b1fb4741-81d7-4c73-aec7-65cbfe0527e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"\")"
+   ]
   }
  ],
  "metadata": {
